# snyfter3

./: Cargo.toml  IMPROVEMENTS.md  README.md  block_selection_usage.txt  install.sh  snyfter3  test_clipboard.sh  test_cursor.txt  test_instructions.txt  virtual_space_summary.txt
src/: block_selection.rs  edit_renderer.rs  editor.rs  keyboard.rs  kitty_native.rs  main.rs  markdown.rs  note_store.rs  qda_codes.rs  search_engine.rs  syntax.rs  templates.rs  ui.rs  ui.rs.backup
