[package]
name = "snyfter3"
version = "3.0.0"
edition = "2021"
authors = ["Jack Grauer"]
description = "A fast note-taking and qualitative data analysis app"

[dependencies]
# Core
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "fs", "time"] }

# Terminal UI
crossterm = "0.28"

# Text editing - HELIX-CORE INTEGRATION!
helix-core = { git = "https://github.com/helix-editor/helix", rev = "dbb472d4" }
helix-view = { git = "https://github.com/helix-editor/helix", rev = "dbb472d4" }
tempfile = "3.22"

# Data storage and search
tantivy = "0.22"  # Full-text search engine (like Lucene)
rusqlite = { version = "0.32", features = ["bundled"] }  # For note storage with SQLite
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"  # Fast binary serialization

# File system and watching
notify = "6.1"  # File system watcher for auto-sync
dirs = "5.0"  # For finding user directories
walkdir = "2.5"  # For directory traversal

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# String utilities
unicode-width = "0.1"
regex = "1.10"
fuzzy-matcher = "0.3"  # For fuzzy search like NValt

# Syntax highlighting for qualitative codes
syntect = "5.2"  # Syntax highlighting library
tree-sitter = "0.22"  # For code parsing
tree-sitter-highlight = "0.22"

# Hash for note IDs
sha2 = "0.10"

# Markdown processing
pulldown-cmark = "0.11"  # Markdown parser