[package]
name = "snyfter3"
version = "3.0.0"
edition = "2021"
authors = ["Jack Grauer"]
description = "A fast note-taking and qualitative data analysis app"

[dependencies]
# Core
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "fs", "time"] }

# Terminal UI
crossterm = "0.28"

# Text editing - HELIX-CORE INTEGRATION!
helix-core = { git = "https://github.com/helix-editor/helix", rev = "dbb472d4" }
helix-view = { git = "https://github.com/helix-editor/helix", rev = "dbb472d4" }
tempfile = "3.22"

# Data storage
rusqlite = { version = "0.32", features = ["bundled"] }  # For note storage with SQLite
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system
dirs = "5.0"  # For finding user directories

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# String utilities
unicode-width = "0.1"
regex = "1.10"
nucleo = "0.5"  # High-performance fuzzy finder for note list

# Syntax highlighting for qualitative codes
syntect = "5.2"  # Syntax highlighting library (keeping per request)

# Hash for note IDs
sha2 = "0.10"